--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Shop</h1>
+<h1>店舗情報編集</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @shop %> |
-<%= link_to 'Back', shops_path %>
+<%= link_to '詳細ページへ', @shop, class: "btn btn-default" %>
+<%= link_to 'TOPに戻る', shops_path, class: "btn btn-default" %>
