--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -12,22 +12,22 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label '店名：' %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :address %><br>
+    <%= f.label '住所：' %><br>
     <%= f.text_field :address %>
   </div>
   <div class="field">
-    <%= f.label :tel %><br>
-    <%= f.number_field :tel %>
+    <%= f.label '電話番号：' %><br>
+    <%= f.telephone_field :tel %>
   </div>
   <div class="field">
-    <%= f.label :url %><br>
-    <%= f.text_field :url %>
+    <%= f.label 'ホームページ' %><br>
+    <%= f.url_field :url %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit '登録する', class: "btn btn-default" %>
   </div>
 <% end %>
