--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,24 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>店名：</strong>
   <%= @shop.name %>
 </p>
 
 <p>
-  <strong>Address:</strong>
+  <strong>住所：</strong>
   <%= @shop.address %>
 </p>
 
 <p>
-  <strong>Tel:</strong>
+  <strong>電話番号：</strong>
   <%= @shop.tel %>
 </p>
 
 <p>
-  <strong>Url:</strong>
-  <%= @shop.url %>
+  <strong>ホームページ：</strong>
+  <a href="<%= @shop.url %>"><%= @shop.url %></a>
 </p>
 
-<%= link_to 'Edit', edit_shop_path(@shop) %> |
-<%= link_to 'Back', shops_path %>
+<%= link_to '編集する', edit_shop_path(@shop), class: "btn btn-default" %>
+<%= link_to 'TOPに戻る', shops_path, class: "btn btn-default" %>
