--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -2,32 +2,23 @@
 
 <h2>店舗一覧</h2>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>店名</th>
-      <th>住所</th>
-      <th>Tel</th>
-      <th>ホームページ</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table class="table table-striped" style="width:100%;">
   <tbody>
+    <tr>
+      <th style="width:70%;">店名</th>
+      <th colspan="3" style="width:30%;"></th>
+    </tr>
     <% @shops.each do |shop| %>
-      <tr>
-        <td><%= shop.name %></td>
-        <td><%= shop.address %></td>
-        <td><%= shop.tel %></td>
-        <td><%= shop.url %></td>
-        <td><%= link_to 'Show', shop, class: "btn btn-default btn-xs" %></td>
-        <td><%= link_to 'Edit', edit_shop_path(shop), class: "btn btn-default btn-xs" %></td>
-        <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %></td>
-      </tr>
+    <tr>
+      <td><%= shop.name %></td>
+      <td><%= link_to '詳細情報', shop, class: "btn btn-default btn-xs" %></td>
+      <td><%= link_to '店舗情報編集', edit_shop_path(shop), class: "btn btn-default btn-xs" %></td>
+      <td><%= link_to 'お店を削除する', shop, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to '新規登録', new_shop_path, class: "btn btn-default" %>
+<%= link_to 'お店を登録する', new_shop_path, class: "btn btn-default" %>
