--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,6 +8,11 @@
     <%= f.text_field :name, autofocus: true, class: "form-control" %>
   </div>
 
+  <div class="form-gropu">
+    <%= f.label 'ユーザーアイコン：' %><br />
+    <%= f.text_field :img_url, autofocus: false, class: "form-control" %>
+  </div>
+
   <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: false, class: "form-control" %>
