reviewモデル作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
       <div class="col-xs-12 col-sm-6 col-md-8">
 <%= yield %>
       </div>
-      <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+      <aside class="col-xs-6 col-md-4">
+        <div><%= image_tag current_user.img_url, width: "80px" %></div>
+        <div><%= current_user.name %>さん　こんにちは！</div>
+      </aside>
 
   </div>
 </div>
