--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <h3><%= @shop.name %></h3>
 <table class="table table-striped">
   <tbody>
@@ -13,11 +12,7 @@
     </tr>
   </tbody>
 </table>
-<div><%= link_to '編集する', edit_shop_path(@shop), class: "btn btn-default" %>　<%= link_to 'TOPに戻る', shops_path, class: "btn btn-default" %></div><br/>
 <hr/>
 <div>
-  <%= link_to 'コメントする', new_shop_review_path(@shop), class: "btn btn-default" %>
+<%= render 'form' %>
 </div>
-<hr/>
-
-
