--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -3,6 +3,10 @@
   <%= f.label :comment, 'コメント：' %>
   <%= f.text_area :comment, class: "form-control" %>
 </div>
+<div>
+  <%= f.label :rate, '評価点' %>
+  <%= f.select :rate, {"★☆☆☆☆" => 1, "★★☆☆☆" => 2, "★★★☆☆" => 3, "★★★★☆" => 4, "★★★★★" => 5}, include_blank: true %>
+</div>
 <% f.hidden_field :shop_id %>
 <div>
   <%= f.submit 'コメントを登録' %>
