--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -19,5 +19,15 @@
   <%= link_to 'コメントする', new_shop_review_path(@shop), class: "btn btn-default" %>
 </div>
 <hr/>
-
-
+<table class="table table-striped">
+  <tbody>
+<% @shop.reviews.each do |review| %>
+    <tr>
+      <td><%= image_tag review.user.img_url, width: "50px" %><br/><%= review.user.name %>さんのコメント</td>
+      <td><% star = review.rate.to_i %>
+<% star.times do %>★<% end %></td>
+      <td><%= review.comment %></td>
+    </tr>
+<% end %>
+  </tbody>
+</table>
