kaminari実装、評価点の平均表示はできず（index、showともに）

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h3><%= @shop.name %></h3>
+<h3><%= @shop.name %>　　<span><%= @review.average(:rate) %></span></h3>
 <table class="table table-striped">
   <tbody>
     <tr>
