--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -5,8 +5,8 @@
 <table class="table table-striped" style="width:100%;">
   <tbody>
     <tr>
-      <th style="width:70%;">店名</th>
-      <th colspan="3" style="width:30%;"></th>
+      <th style="width:60%;">店名</th>
+      <th colspan="3" style="width:20%;"></th>
     </tr>
     <% @shops.each do |shop| %>
     <tr>
@@ -18,7 +18,8 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
+<div style="text-align:center;">
+  <%= paginate @shops %>
+</div>
+<hr/>
 <%= link_to 'お店を登録する', new_shop_path, class: "btn btn-default" %>
