最新記事の表示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,11 @@
       <div class="col-xs-12 col-sm-6 col-md-8">
 <%= yield %>
       </div>
-      <aside class="col-xs-6 col-md-4">
-      </aside>
-
+        <aside class="col-xs-6 col-md-4">
+        <%= render 'layouts/aside' %>
+  </aside>
   </div>
+
 </div>
 </body>
 </html>
