shop.rbにクラスメソッドave_rate定義→index.html.erで呼び出し

--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -12,7 +12,7 @@
 <% @shops.each do |shop| %>
     <tr>
       <td><%= shop.name %></td>
-      <td></td>
+      <td><%= shop.ave_rate %></td>
       <td><%= link_to '詳細情報', shop, class: "btn btn-default btn-xs" %></td>
       <td><%= link_to '店舗情報編集', edit_shop_path(shop), class: "btn btn-default btn-xs" %></td>
       <td><%= link_to 'お店を削除する', shop, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %></td>
