ログイン中のユーザー名を表示

--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -1,3 +1,8 @@
+<% if user_signed_in? %>
+  <p><%= current_user.name %>さん、こんにちは！</p>
+<% else %>
+  <p>ゲストさん、こんにちは！</p>
+<% end %>
 <h3>最新記事</h3>
 <div class="list-group">
   <% Review.latest.each do |shop| %>
